# api/docs/swagger.json
@@ -4,41 +4,6 @@
         "contact": {}
     },
     "paths": {
-        "/v1/get-from-open-api/": {
-            "get": {
-                "description": "This API for getting list of posts from open apu",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "open_api_posts"
-                ],
-                "summary": "GetPostsFromApi",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.SuccessfullResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.StandardErrorModel"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/models.StandardErrorModel"
-                        }
-                    }
-                }
-            }
-        },
         "/v1/posts/create-post/": {
             "post": {
                 "description": "This API for creating a new post",
@@ -59,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Post"
+                            "$ref": "#/definitions/models.PostRequest"
                         }
                     }
                 ],
@@ -129,6 +94,41 @@
                 }
             }
         },
+        "/v1/posts/get-from-open-api/": {
+            "get": {
+                "description": "This API for getting list of posts from open api",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "open_api_posts"
+                ],
+                "summary": "GetPostsFromOpenAPI",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.SuccessfullResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.StandardErrorModel"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.StandardErrorModel"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/posts/get-post/{id}/": {
             "get": {
                 "description": "This API for getting post by id",
@@ -141,7 +141,7 @@
                 "tags": [
                     "post"
                 ],
-                "summary": "GetPostById",
+                "summary": "GetPostByID",
                 "parameters": [
                     {
                         "type": "integer",
@@ -249,7 +249,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.UpdatePost"
+                            "$ref": "#/definitions/models.PostRequest"
                         }
                     }
                 ],
@@ -305,8 +305,28 @@
                 "body": {
                     "type": "string"
                 },
+                "created_at": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.PostRequest": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
@@ -329,20 +349,6 @@
             "properties": {
                 "message": {
                     "type": "string"
-                }
-            }
-        },
-        "models.UpdatePost": {
-            "type": "object",
-            "properties": {
-                "body": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         }
