# api/routers.go
@@ -12,36 +12,35 @@ import (
 	"github.com/Muhammadjon226/api_gateway/services"
 )
 
-// Option ...
-type Option struct {
+// Config ...
+type Config struct {
 	Conf           config.Config
 	Logger         logger.Logger
 	ServiceManager services.IServiceManager
 }
 
 // New ...
-func New(option Option) *gin.Engine {
+func New(cfg Config) *gin.Engine {
 	router := gin.New()
 
 	router.Use(gin.Logger())
 	router.Use(gin.Recovery())
 
-	handlerV1 := v1.New(&v1.HandlerV1Config{
-		Logger:         option.Logger,
-		ServiceManager: option.ServiceManager,
-		Cfg:            option.Conf,
-	})
+	HandlerV1 := v1.New(
+		cfg.Logger,
+		cfg.ServiceManager,
+		cfg.Conf)
 
 	api := router.Group("/v1")
 	// Get Posts from open api
-	api.GET("/get-from-open-api/", handlerV1.GetPostsFromApi)
+	api.GET("/posts/get-from-open-api/", HandlerV1.GetPostsFromAPI)
 
 	// Posts
-	api.POST("/posts/create-post/", handlerV1.CreatePost)
-	api.GET("/posts/get-post/:id/", handlerV1.GetPostById)
-	api.PUT("/posts/update-post/:id/", handlerV1.UpdatePost)
-	api.DELETE("/posts/delete-post/:id/", handlerV1.DeletePost)
-	api.GET("/posts/list-posts/", handlerV1.ListPosts)
+	api.POST("/posts/create-post/", HandlerV1.CreatePost)
+	api.GET("/posts/get-post/:id/", HandlerV1.GetPostByID)
+	api.PUT("/posts/update-post/:id/", HandlerV1.UpdatePost)
+	api.DELETE("/posts/delete-post/:id/", HandlerV1.DeletePost)
+	api.GET("/posts/list-posts/", HandlerV1.ListPosts)
 
 	url := ginSwagger.URL("swagger/doc.json") // The url pointing to API definition
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler, url))
